--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -349,17 +349,28 @@ Furthermore, the application can encounter:
 	\item\textbf{SafeStreet Interfaces}
 	\begin{itemize}
 		\item \textbf{SafeStreets Logo:}\\
-		SafeStreets has a simple but explicative logo. It represents a street, because the main theme of the application concerns public roads. It also have a green tick, that represents the correct functioning and the safety of the streets.
+		SafeStreets has a simple but explicative logo. It represents a street, because the main theme of the application concerns public roads. It also have a green tick, that represents the correct functioning and the safety of the streets.\\ \\ \\ \\ \\
+		
+	\begin{figure}[htbp]
+	\includegraphics[scale=0.8]{Mockups/LogoSafeStreets.png}
+	\centering
+	\caption{SafeStreets Logo}
+\end{figure}
+
+	\newpage
+
+	\item \textbf{SafeStreets loading page:}\\
+	
+	\begin{figure}[htbp]
+	\includegraphics[scale=0.3]{Mockups/Introduction.png}
+	\centering
+	\caption{SafeStreets Loading}
+	\end{figure}
 		
 		
 	\end{itemize}
 	
-	\begin{figure}[htbp
-]
-	\includegraphics[scale=0.8]{Mockups/LogoSafeStreets.png}
-	\centering
-	\caption{SafeStreets Logo}
-\end{figure}	
+	
 	
 	
 	
