Inserted state chart diagram and inserted the png of it

--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -280,6 +280,17 @@ This is the violation class diagram:
 	\caption{Violation class diagram}
 \end{figure}
 
+\subsubsection{State charts: }
+Here you can find a state chart diagram of the system:
+
+\begin{figure}[htbp
+]
+	\includegraphics[scale=0.3]{State_chart.png}
+	\centering
+	\caption{System State chart diagram}
+\end{figure}
+
+
 \subsection{Product functions: }
 In this section there is a description of the main functions that the system will make available to the final user.\\
 These functions are the following:
