Fixed position of images in the pdf

--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -268,7 +268,7 @@ The system, after having received a picture of the violation, will run an algori
 if the place of the violation is manually entered by the user there is the possibility that such place doesn't exist. In this case the system must automatically report an error to the user. Otherwise the system will store the street in the database together with all the other information related to the violation.
 \subsubsection{Class diagrams:}
 This is the user class diagram:
-\begin{figure}[htbp
+\begin{figure}[h
 ]
 	\includegraphics[scale=0.3]{UML users v1.0.png}
 	\centering
@@ -278,7 +278,7 @@ This is the user class diagram:
 
 
 This is the violation class diagram:
-\begin{figure}[htbp
+\begin{figure}[h
 ]
 	\includegraphics[scale=0.3]{UML violation v1.1.png}
 	\centering
@@ -289,7 +289,7 @@ This is the violation class diagram:
 \subsubsection{State charts: }
 Here you can find a state chart diagram of the system:
 
-\begin{figure}[h!
+\begin{figure}[h
 ]
     \includegraphics[scale=0.3]{State_chart.png}
 	\centering
@@ -388,7 +388,7 @@ Furthermore, the application can encounter:
 		\item \textbf{SafeStreets Logo:}\\
 		SafeStreets has a simple but explicative logo. It represents a street, because the main theme of the application concerns public roads. It also have a green tick, that represents the correct functioning and the safety of the streets.\\ \\ \\ \\ \\
 		
-	\begin{figure}[htbp]
+	\begin{figure}[h]
 	\includegraphics[scale=0.8]{Mockups/LogoSafeStreets.png}
 	\centering
 	\caption{SafeStreets Logo}
@@ -400,7 +400,7 @@ Furthermore, the application can encounter:
 
 	\item \textbf{SafeStreets loading page:}\\
 	
-	\begin{figure}[htbp]
+	\begin{figure}[h]
 	\includegraphics[scale=0.3]{Mockups/Introduction.png}
 	\centering
 	\caption{SafeStreets Loading}
@@ -425,7 +425,7 @@ The system will have to be designed for the most common smart-phones operating s
 The choice of that decision is the fact that these operating systems are the most common use ones.
 	
 \end{itemize}
-\subsection{Communication interfaces: }
+\subsubsection{Communication interfaces: }
 Each smart-phone that will use Safestreets will communicate thanks to the HTTPS protocol. We've chosen this protocol because thanks to it, it is possible to obtain a secure connection between nodes. Furthermore it is a very very common use protocol for the connections over internet. Because of this it is very probable to not have any problem related to the protocol from several points of view.
 
 \end{document}
