--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -5,6 +5,9 @@
 \usepackage{graphicx}
 \usepackage{graphicx}
 \usepackage{grffile}
+\usepackage{float}
+\usepackage{placeins}
+
 
 
 \author{Luca Massini \and Daniele Nicolò}
@@ -265,26 +268,41 @@ The system, after having received a picture of the violation, will run an algori
 if the place of the violation is manually entered by the user there is the possibility that such place doesn't exist. In this case the system must automatically report an error to the user. Otherwise the system will store the street in the database together with all the other information related to the violation.
 \subsubsection{Class diagrams:}
 This is the user class diagram:
-\begin{figure}[htbp
+\begin{figure}[h
 ]
 	\includegraphics[scale=0.3]{UML users v1.0.png}
 	\centering
 	\caption{User class diagram}
 \end{figure}
+\FloatBarrier
+
 
 This is the violation class diagram:
-\begin{figure}[htbp
+\begin{figure}[h
 ]
 	\includegraphics[scale=0.3]{UML violation v1.1.png}
 	\centering
 	\caption{Violation class diagram}
 \end{figure}
+\FloatBarrier
+
+\subsubsection{State charts: }
+Here you can find a state chart diagram of the system:
+
+\begin{figure}[h
+]
+    \includegraphics[scale=0.3]{State_chart.png}
+	\centering
+	\caption{System State chart diagram}
+\end{figure}
+\FloatBarrier
+
 
 \subsection{Product functions: }
 In this section there is a description of the main functions that the system will make available to the final user.\\
 These functions are the following:
 \begin{itemize}
-	\item \textbf{Report of a violation:} Safestreets allows the user to report a violation. To do that he/she has to take a picture, indicate the hour and, eventually, the location where the violation occurred. The place where the violation occurred is taken automatically in case the user does not want to insert it himself, using the smartphone GPS signal. After that the violation will be reported to the municipality that will handle the problem.
+	\item \textbf{Report of a violation:} Safestreets allows the user to report a violation. To do that he/she has to take a picture, indicate the hour and, eventually, the location where the violation occurred. The place where the violation occurred is taken automatically in case the user does not want to insert it himself, using the smart-phone GPS signal. After that the violation will be reported to the municipality that will handle the problem.
 	\item \textbf{Request of the list of vehicles that have committed the highest number of violations:}
 	The users and the authorities can make a request and ask what are the vehicles that have committed the highest number of violations. This request (if no exception happen) will show a list of license plates to the user. The request can be personalized by expressing: a maximum number of vehicles that must be showed. If the number is not given as input the system will show a fixed number of results.
 	\item \textbf{Get the list of most dangerous streets: }
@@ -348,17 +366,18 @@ Furthermore, the application can encounter:
 \subsubsection{Constraints: }
 \begin{itemize}
 	\item  The system must treat the users' personal data in according to the GDPR regulation.
-	\item The system will be designed and implemented for smartphones.
+	\item The system will be designed and implemented for smart-phones.
 	\item Since the system uses the fiscal code to identify the user it is supposed that it will be used only in Italy, so the application will have to be available only in the Italian app stores.
 	\item The pictures must be taken only through the app camera and not imported from the device gallery in order to take photos in real time.
 \end{itemize}
 
 \subsubsection{Dependencies: }
 \begin{itemize}
-	\item The system will use the GPS services provided by the smartphones.
-	\item The system will use the internet services offered by the smartphones.\\
+	\item The system will use the GPS services provided by the smart-phones.
+	\item The system will use the internet services offered by the smart-phones.\\
 \end{itemize}
 
+\newpage
 
 
 \section{Specific Requirements}
@@ -370,31 +389,267 @@ Furthermore, the application can encounter:
 		\item \textbf{SafeStreets Logo:}\\
 		SafeStreets has a simple but explicative logo. It represents a street, because the main theme of the application concerns public roads. It also have a green tick, that represents the correct functioning and the safety of the streets.\\ \\ \\ \\ \\
 		
-	\begin{figure}[htbp]
+	\begin{figure}[h]
 	\includegraphics[scale=0.8]{Mockups/LogoSafeStreets.png}
 	\centering
 	\caption{SafeStreets Logo}
 \end{figure}
 
-	\newpage
+\FloatBarrier
+\newpage
 
+
+	
+	
 	\item \textbf{SafeStreets loading page:}\\
 	
-	\begin{figure}[htbp]
+	\begin{figure}[h]
 	\includegraphics[scale=0.3]{Mockups/Introduction.png}
 	\centering
 	\caption{SafeStreets Loading}
 	\end{figure}
+	\FloatBarrier
+	
+	\newpage
+	
+	\item \textbf{SafeStreets log-in page:}\\
+	This is the page a user sees when he downloads the app and opens it for the first time or when he has done a log-out. In this page there is the possibility to log-in (inserting username and password) or to sign-up. The user can also recover his credential using the funcion below the log-in button. When logged-in, the user will be redirected to the Home Page, that will be different for private users and authorities.
+	\begin{figure}[h]
+	\includegraphics[scale=0.7]{Mockups/log in.png}
+	\centering
+	\caption{SafeStreets Log-in}
+	\end{figure}
+	\FloatBarrier
+	
+	
+	\newpage
+	
+	\item \textbf{SafeStreets sign-up account choice:}\\
+	
+	Here the user can choose the type of account he wants to create. There is the account reserved to the municipality and the one available to a private user. By choosing one or the other, the user will be redirected to the second step of the sign-up.
+	
+	\begin{figure}[h]
+	\includegraphics[scale=0.7]{Mockups/Account choice.png}
+	\centering
+	\caption{SafeStreets Account Choice}
+	\end{figure}
+	\FloatBarrier
+	
+	
+	\newpage
+	
+	\item \textbf{SafeStreets private user sign-up:}\\
+	
+	This is the first part of the private user's  sign-up. Here the user has to put his first name, his last name, the username he will use in SafeStreets (that will also identify him uniquely) and the password, that has to comply the security policy. Then he can continue to the second part of the registration.
+	\begin{figure}[h]
+	\includegraphics[scale=0.8]{Mockups/first sign up.png}
+	\centering
+	\caption{SafeStreets private user sign-up, first part}
+	\end{figure}
+	\FloatBarrier
+	
+	\newpage
+	
+	
+	
+	\item \textbf{SafeStreets private user sign-up (second part):}\\
+	
+	This is the second and last part of the private user's sign-up in the SafeStreets platform. Here the user has to fill the fields with his personal e-mail and his FC. Furthermore he has to choose  which category he belongs to and he can also indicate if this account will be created for a disable person or not. Finally, he has to insert his date of birth and optionally he can add the id of his drive license if he drives a vehicle that needs it. After doing that the sign-up is complete and the user will be redirected to the log-in page.
+	
+	\begin{figure}[h]
+	\includegraphics[scale=0.8]{Mockups/second sign up.png}
+	\centering
+	\caption{SafeStreets private user sign-up, second part}
+	\end{figure}
+	\FloatBarrier
+	
+	\newpage	
+	
+	
+	
+	
+	\item \textbf{SafeStreets municipality sign-up:}\\
+	If the user has chosen the municipality sign-up he will be redirected here. The authorities must indicate the city of their competence and must insert an ID code to prove that they have the authorization to represent the municipality. Then they have to insert a username and a password, in the same way as explained for private users. Then they will be redirected to the log-in page.
+	
+	\begin{figure}[h]
+	\includegraphics[scale=0.8]{Mockups/Municipality sign-up.png}
+	\centering
+	\caption{SafeStreets Municipality sign-up}
+	\end{figure}
+	\FloatBarrier
+	
+	\newpage
+	
+	
+	
+	
+	
+	\item \textbf{SafeStreets Private User's Home Page:}\\
+		
+	This is the Home Page reserved to private users. It's a very basic interface, because we want that SafeStreet will be used by as many types of people as possible. Its functions are very easy to understand and they are the possibility to report a violation to the system, the chance to see which are the most reported streets in a selected area, the possibility to see the condition (in terms of safety) of a selected street, parking lot or area and the chance to check which are the vehicles that are reported the most. Finally there is also the log-out button.
+
+	
+	
+	\begin{figure}[h]
+	\includegraphics[scale=0.8]{Mockups/main functionalities.png}
+	\centering
+	\caption{SafeStreets Private Users' Home Page}
+	\end{figure}
+	\FloatBarrier
+	
+	\newpage	
+	
+	
+	\item \textbf{SafeStreets Private User's Home Page:}\\
+
+	This is the first function presented in the Home Page. Here the user can report a violation that he has seen. The first field to fill is the one that allows the user to describe the violation, indicating the type of violation that he has seen (for example motorcycle parking areas occupied by cars, or traffic accidents, and so on). Then he has to indicate the date and the hour of the violation. Furthermore a user has to indicate (manually or with GPS signal) the street and the city of the violation and finally he can take a photograph of the violation (but this is mandatory).
+	
+	\begin{figure}[h]
+	\includegraphics[scale=0.8]{Mockups/Report a violation.png}
+	\centering
+	\caption{SafeStreets Violation Reporting interface}
+	\end{figure}
+	\FloatBarrier
+	
+	\newpage
+	
+	
+	
+	
+	
+	
+	\item \textbf{SafeStreets Most reported streets interface :}\\
+		
+	This interface allows the user to check which are the most reported streets in a city. The city can be inserted manually by the user or retrieved automatically by the system using the GPS signal of the user's smartphone. The user has to specify how many streets the list should be made up. Then he has to submit the request and he will receive the list.
+	
+	
+	\begin{figure}[h]
+	\includegraphics[scale=0.8]{Mockups/Most reported streets.png}
+	\centering
+	\caption{SafeStreets Most reported streets interface}
+	\end{figure}
+	\FloatBarrier
+	
+	\newpage		
+	
+	
+	
+
+	
+	
+	\item \textbf{SafeStreets safest streets interface :}\\
+		
+	Here the user can check which is the condition of a selected street. He can specify the street manually, inserting its name and the name of the city. The street can also be retrieved automatically by the system with the GPS signal of the user's smartphone. Then the user has to insert a radius (expressed in KM) within which the system will provide the condition of the contained streets, highlighting the safest and the most dangerous ones.
+	\begin{figure}[h]
+	\includegraphics[scale=0.8]{Mockups/safest streets.png}
+	\centering
+	\caption{SafeStreets safest streets interface}
+	\end{figure}
+	\FloatBarrier
+	
+	\newpage		
+	
+	
+	
+	
+	\item \textbf{SafeStreets safest parking areas :}\\
+		
+	The user can use this functionality to find the safest place where to park his vehicle. He has to specify his position, that can be done manually (inserting the name of the city and the street) or, as in the other functionalities, automatically (using the GPS signal of the smartphone). Then the user has to insert the maximum distance (expressed in kilometres) from the selected position to which he is willing to get. After have inserted all the needed information, the user will see the safest parking area where to go, highlighted differently from the less safe ones.
+	\begin{figure}[h]
+	\includegraphics[scale=0.8]{Mockups/Park safely.png}
+	\centering
+	\caption{SafeStreets safest parking area interface}
+	\end{figure}
+	\FloatBarrier
+	
+	\newpage
+	
+	
+	
+	
+	
+	\item \textbf{SafeStreets Most dangerous vehicles :}\\
+	
+	Here the user can check which are the most reported vehicles in a selected street. The street can be inserted as in the previous functionalities, manually or automatically and it's also mandatory to indicate the maximum number of vehicles that will make up the chart. Then the user will have the list of the selected vehicles so that, for example, he will avoid to park near them, and so on.	
+	
+	\begin{figure}[h]
+	\includegraphics[scale=0.8]{Mockups/Vehicles major violations.png}
+	\centering
+	\caption{SafeStreets Most dangerous vehicles}
+	\end{figure}
+	\FloatBarrier
+	
+	\newpage
+	
+	
+	
+	
+	
+	\item \textbf{SafeStreets Municipality Home Page :}\\
+	
+	This is the Home Page reserved to the authorities. Here the municipality has the possibility to choose between four functionalities:
+	three are structured in the same way of the ones designed for the private users, and are the possibility to check the most reported streets and  the most reported vehicles in the city. The interfaces for the requests are the same than the ones for the users. The municipality also has the possibility to do a request to obtain suggestions in order to improve the quality of their service and, so, the safety of the city. 
+	
+	\begin{figure}[h]
+	\includegraphics[scale=0.8]{Mockups/Municipality main functionalities.png}
+	\centering
+	\caption{SafeStreets Municipality Home Page}
+	\end{figure}
+	\FloatBarrier
+	
+	\newpage
+	
+	
+	
+	
+	
+	\item \textbf{SafeStreets Municipality suggestions request :}\\
+	
+	Here the municipality can make a request in order to discover which are the suggestions provided by SafeStreets to enhance the safety of the city. The authorities have to insert the name of the city, or providing it using the GPS signal of their device.
+	
+	\begin{figure}[h]
+	\includegraphics[scale=0.8]{Mockups/Request for safety improvements.png}
+	\centering
+	\caption{SafeStreets Municipality Suggestions Request}
+	\end{figure}
+	\FloatBarrier
+	
+	\newpage
+	
+	
+	
+	After having submitted the information, the municipality will receive the suggestions provided by SafeStreets concerning the indicated city. The data is retrieved by SafeStreets mining the information received by the users with their reports.
+	
+	
+	\begin{figure}[h]
+	\includegraphics[scale=0.95]{Mockups/List of suggestions.png}
+	\centering
+	\caption{SafeStreets Municipality Suggestions List}
+	\end{figure}
+	\FloatBarrier
+	
+	\newpage
+	
 		
 		
 	\end{itemize}
 	
+\subsubsection{Hardware Interfaces: }
+The system doesn't offer any kind of hardware interface to the user. In fact the user can use the application simply thanks to his/her phone.
+\subsubsection{Software interfaces: }
+The system offers his service through the use of the following software interfaces:\\ \\
+\textbf{Operating systems:\\ }
+The system will have to be designed for the most common smart-phones operating system: 
 	
-	
-	
-	
+\begin{itemize}
+	\item Android 
+	\item IOS
+\end{itemize}	
+The choice of that decision is the fact that these operating systems are the most common use ones.
 	
 \end{itemize}
+\subsubsection{Communication interfaces: }
+Each smart-phone that will use Safestreets will communicate thanks to the HTTPS protocol. We've chosen this protocol because thanks to it, it is possible to obtain a secure connection between nodes. Furthermore it is a very very common use protocol for the connections over internet. Because of this it is very probable to not have any problem related to the protocol from several points of view.
 
 \end{document}
 
