--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -433,8 +433,34 @@ The choice of that decision is the fact that these operating systems are the mos
 \end{itemize}
 \subsubsection{Communication interfaces: }
 Each smart-phone that will use Safestreets will communicate thanks to the HTTPS protocol. We've chosen this protocol because thanks to it, it is possible to obtain a secure connection between nodes. Furthermore it is a very very common use protocol for the connections over internet. Because of this it is very probable to not have any problem related to the protocol from several points of view.
-\subsection{Use case diagrams: }
-In this subsection you will find the use case diagram. It is very important because it allows the reader to understand the flow of events between actors and the system itself.
+\subsection{Functional Requirements:}
+\subsubsection{Use case diagrams: }
+In this subsection you will find the use case diagram. It is very important because it allows the reader to understand the flow of events between actors and the system itself. We have done two different use case diagrams to make them more explanatory and less confusing.
+
+\begin{figure}[h]
+	\textbf{The first diagram:\\ \\ \\}
+	\includegraphics[scale=0.475]{use case diagrams/use case diagrams.png}
+	\centering
+	\caption{First use case diagram}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[h]
+	\textbf{The second diagram:\\ \\ \\}
+	\includegraphics[scale=0.475]{use case diagrams/use-case2.png}
+	\centering
+	\caption{Second use case diagram}
+\end{figure}
+\FloatBarrier
+
+\subsubsection{Scenarios:}
+\paragraph{Scenario 1:}Luigi is a middle-aged man which lives in a very busy area of Milan. This district is very known to be a zone with a strong lack of parking. People usually park their vehicles in illegal zone.
+Because of this, he has found  cars parked in front of his home gate several times. He has called the the municipality many times and now he is fed up about this situation. He usually calls the municipality with his phone but this process takes a lot of time because the telephone line is always busy. He would like the authorities to be have a better communication channel.\\Luckily he has downloaded an application called Safestreets. He has read in the description the fact that the application allow a user to report a violation via smart-phone.\\
+Thanks to this mobile application he is now able to save time in reporting violations. Furthermore, he has observed that  the municipality has started to do checks more frequently even without any report (because of the Safestreets suggestions to the municipality).
+\paragraph{Scenario 2:}Giovanni lives very close to the place where he works but he usually goes to work by car even if he would like to go there by bicycle. The problem is that the zone is very traffic and unfortunately accidents involving cyclists happen very often. Because of this, he does not feel like taking the risk.
+
+
 \end{document}
+
 
 
